--- a/RedditRecommender/angular.json
+++ b/RedditRecommender/angular.json
@@ -32,7 +32,9 @@
               "../node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "../node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+              "../node_modules/jquery/dist/jquery.slim.min.js",
+              "../node_modules/popper.js/dist/umd/popper.min.js",
+              "../node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
